// SPDX-License-Identifier: GPL-2.0-or-later
edition = "2023";

package protos;
import "google/protobuf/go_features.proto";
option go_package = "github.com/therjak/goquake/protos";
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;
option features.(pb.go).api_level = API_OPAQUE;

// nop == empty Cmd
// disconnect
// stringcmd
// move

message UsrCmd {
  float message_time = 1;
  float pitch = 2;
  float yaw = 3;
  float roll = 4;
  float forward = 5;
  float side = 6;
  float up = 7;
  bool attack = 8;
  bool jump = 9;
  int32 impulse = 10;
}

message Cmd {
  oneof union {
    bool disconnect = 1;
    string string_cmd = 2;
    UsrCmd move_cmd = 3;
  }
}

message ClientMessage {
  repeated Cmd cmds = 1;
}
